src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> script
Rule 1     script -> sections
Rule 2     sections -> section sections
Rule 3     sections -> section
Rule 4     section -> step_section
Rule 5     step_section -> STEP STRING statements
Rule 6     statements -> statement statements
Rule 7     statements -> statement
Rule 8     statement -> reply_statement
Rule 9     statement -> log_statement
Rule 10    statement -> wait_statement
Rule 11    reply_statement -> REPLY expression
Rule 12    log_statement -> LOG expression
Rule 13    wait_statement -> WAIT string_list
Rule 14    string_list -> string_list STRING
Rule 15    string_list -> STRING
Rule 16    expression -> arithmetic_expression
Rule 17    expression -> simple_expression
Rule 18    arithmetic_expression -> expression PLUS expression
Rule 19    simple_expression -> STRING
Rule 20    simple_expression -> VARIABLE

Terminals, with rules where they appear

LOG                  : 12
PLUS                 : 18
REPLY                : 11
STEP                 : 5
STRING               : 5 14 15 19
VARIABLE             : 20
WAIT                 : 13
error                : 

Nonterminals, with rules where they appear

arithmetic_expression : 16
expression           : 11 12 18 18
log_statement        : 9
reply_statement      : 8
script               : 0
section              : 2 3
sections             : 1 2
simple_expression    : 17
statement            : 6 7
statements           : 5 6
step_section         : 4
string_list          : 13 14
wait_statement       : 10

Parsing method: LALR

state 0

    (0) S' -> . script
    (1) script -> . sections
    (2) sections -> . section sections
    (3) sections -> . section
    (4) section -> . step_section
    (5) step_section -> . STEP STRING statements

    STEP            shift and go to state 5

    script                         shift and go to state 1
    sections                       shift and go to state 2
    section                        shift and go to state 3
    step_section                   shift and go to state 4

state 1

    (0) S' -> script .



state 2

    (1) script -> sections .

    $end            reduce using rule 1 (script -> sections .)


state 3

    (2) sections -> section . sections
    (3) sections -> section .
    (2) sections -> . section sections
    (3) sections -> . section
    (4) section -> . step_section
    (5) step_section -> . STEP STRING statements

    $end            reduce using rule 3 (sections -> section .)
    STEP            shift and go to state 5

    section                        shift and go to state 3
    sections                       shift and go to state 6
    step_section                   shift and go to state 4

state 4

    (4) section -> step_section .

    STEP            reduce using rule 4 (section -> step_section .)
    $end            reduce using rule 4 (section -> step_section .)


state 5

    (5) step_section -> STEP . STRING statements

    STRING          shift and go to state 7


state 6

    (2) sections -> section sections .

    $end            reduce using rule 2 (sections -> section sections .)


state 7

    (5) step_section -> STEP STRING . statements
    (6) statements -> . statement statements
    (7) statements -> . statement
    (8) statement -> . reply_statement
    (9) statement -> . log_statement
    (10) statement -> . wait_statement
    (11) reply_statement -> . REPLY expression
    (12) log_statement -> . LOG expression
    (13) wait_statement -> . WAIT string_list

    REPLY           shift and go to state 13
    LOG             shift and go to state 14
    WAIT            shift and go to state 15

    statements                     shift and go to state 8
    statement                      shift and go to state 9
    reply_statement                shift and go to state 10
    log_statement                  shift and go to state 11
    wait_statement                 shift and go to state 12

state 8

    (5) step_section -> STEP STRING statements .

    STEP            reduce using rule 5 (step_section -> STEP STRING statements .)
    $end            reduce using rule 5 (step_section -> STEP STRING statements .)


state 9

    (6) statements -> statement . statements
    (7) statements -> statement .
    (6) statements -> . statement statements
    (7) statements -> . statement
    (8) statement -> . reply_statement
    (9) statement -> . log_statement
    (10) statement -> . wait_statement
    (11) reply_statement -> . REPLY expression
    (12) log_statement -> . LOG expression
    (13) wait_statement -> . WAIT string_list

    STEP            reduce using rule 7 (statements -> statement .)
    $end            reduce using rule 7 (statements -> statement .)
    REPLY           shift and go to state 13
    LOG             shift and go to state 14
    WAIT            shift and go to state 15

    statement                      shift and go to state 9
    statements                     shift and go to state 16
    reply_statement                shift and go to state 10
    log_statement                  shift and go to state 11
    wait_statement                 shift and go to state 12

state 10

    (8) statement -> reply_statement .

    REPLY           reduce using rule 8 (statement -> reply_statement .)
    LOG             reduce using rule 8 (statement -> reply_statement .)
    WAIT            reduce using rule 8 (statement -> reply_statement .)
    STEP            reduce using rule 8 (statement -> reply_statement .)
    $end            reduce using rule 8 (statement -> reply_statement .)


state 11

    (9) statement -> log_statement .

    REPLY           reduce using rule 9 (statement -> log_statement .)
    LOG             reduce using rule 9 (statement -> log_statement .)
    WAIT            reduce using rule 9 (statement -> log_statement .)
    STEP            reduce using rule 9 (statement -> log_statement .)
    $end            reduce using rule 9 (statement -> log_statement .)


state 12

    (10) statement -> wait_statement .

    REPLY           reduce using rule 10 (statement -> wait_statement .)
    LOG             reduce using rule 10 (statement -> wait_statement .)
    WAIT            reduce using rule 10 (statement -> wait_statement .)
    STEP            reduce using rule 10 (statement -> wait_statement .)
    $end            reduce using rule 10 (statement -> wait_statement .)


state 13

    (11) reply_statement -> REPLY . expression
    (16) expression -> . arithmetic_expression
    (17) expression -> . simple_expression
    (18) arithmetic_expression -> . expression PLUS expression
    (19) simple_expression -> . STRING
    (20) simple_expression -> . VARIABLE

    STRING          shift and go to state 20
    VARIABLE        shift and go to state 21

    expression                     shift and go to state 17
    arithmetic_expression          shift and go to state 18
    simple_expression              shift and go to state 19

state 14

    (12) log_statement -> LOG . expression
    (16) expression -> . arithmetic_expression
    (17) expression -> . simple_expression
    (18) arithmetic_expression -> . expression PLUS expression
    (19) simple_expression -> . STRING
    (20) simple_expression -> . VARIABLE

    STRING          shift and go to state 20
    VARIABLE        shift and go to state 21

    expression                     shift and go to state 22
    arithmetic_expression          shift and go to state 18
    simple_expression              shift and go to state 19

state 15

    (13) wait_statement -> WAIT . string_list
    (14) string_list -> . string_list STRING
    (15) string_list -> . STRING

    STRING          shift and go to state 24

    string_list                    shift and go to state 23

state 16

    (6) statements -> statement statements .

    STEP            reduce using rule 6 (statements -> statement statements .)
    $end            reduce using rule 6 (statements -> statement statements .)


state 17

    (11) reply_statement -> REPLY expression .
    (18) arithmetic_expression -> expression . PLUS expression

    REPLY           reduce using rule 11 (reply_statement -> REPLY expression .)
    LOG             reduce using rule 11 (reply_statement -> REPLY expression .)
    WAIT            reduce using rule 11 (reply_statement -> REPLY expression .)
    STEP            reduce using rule 11 (reply_statement -> REPLY expression .)
    $end            reduce using rule 11 (reply_statement -> REPLY expression .)
    PLUS            shift and go to state 25


state 18

    (16) expression -> arithmetic_expression .

    PLUS            reduce using rule 16 (expression -> arithmetic_expression .)
    REPLY           reduce using rule 16 (expression -> arithmetic_expression .)
    LOG             reduce using rule 16 (expression -> arithmetic_expression .)
    WAIT            reduce using rule 16 (expression -> arithmetic_expression .)
    STEP            reduce using rule 16 (expression -> arithmetic_expression .)
    $end            reduce using rule 16 (expression -> arithmetic_expression .)


state 19

    (17) expression -> simple_expression .

    PLUS            reduce using rule 17 (expression -> simple_expression .)
    REPLY           reduce using rule 17 (expression -> simple_expression .)
    LOG             reduce using rule 17 (expression -> simple_expression .)
    WAIT            reduce using rule 17 (expression -> simple_expression .)
    STEP            reduce using rule 17 (expression -> simple_expression .)
    $end            reduce using rule 17 (expression -> simple_expression .)


state 20

    (19) simple_expression -> STRING .

    PLUS            reduce using rule 19 (simple_expression -> STRING .)
    REPLY           reduce using rule 19 (simple_expression -> STRING .)
    LOG             reduce using rule 19 (simple_expression -> STRING .)
    WAIT            reduce using rule 19 (simple_expression -> STRING .)
    STEP            reduce using rule 19 (simple_expression -> STRING .)
    $end            reduce using rule 19 (simple_expression -> STRING .)


state 21

    (20) simple_expression -> VARIABLE .

    PLUS            reduce using rule 20 (simple_expression -> VARIABLE .)
    REPLY           reduce using rule 20 (simple_expression -> VARIABLE .)
    LOG             reduce using rule 20 (simple_expression -> VARIABLE .)
    WAIT            reduce using rule 20 (simple_expression -> VARIABLE .)
    STEP            reduce using rule 20 (simple_expression -> VARIABLE .)
    $end            reduce using rule 20 (simple_expression -> VARIABLE .)


state 22

    (12) log_statement -> LOG expression .
    (18) arithmetic_expression -> expression . PLUS expression

    REPLY           reduce using rule 12 (log_statement -> LOG expression .)
    LOG             reduce using rule 12 (log_statement -> LOG expression .)
    WAIT            reduce using rule 12 (log_statement -> LOG expression .)
    STEP            reduce using rule 12 (log_statement -> LOG expression .)
    $end            reduce using rule 12 (log_statement -> LOG expression .)
    PLUS            shift and go to state 25


state 23

    (13) wait_statement -> WAIT string_list .
    (14) string_list -> string_list . STRING

    REPLY           reduce using rule 13 (wait_statement -> WAIT string_list .)
    LOG             reduce using rule 13 (wait_statement -> WAIT string_list .)
    WAIT            reduce using rule 13 (wait_statement -> WAIT string_list .)
    STEP            reduce using rule 13 (wait_statement -> WAIT string_list .)
    $end            reduce using rule 13 (wait_statement -> WAIT string_list .)
    STRING          shift and go to state 26


state 24

    (15) string_list -> STRING .

    STRING          reduce using rule 15 (string_list -> STRING .)
    REPLY           reduce using rule 15 (string_list -> STRING .)
    LOG             reduce using rule 15 (string_list -> STRING .)
    WAIT            reduce using rule 15 (string_list -> STRING .)
    STEP            reduce using rule 15 (string_list -> STRING .)
    $end            reduce using rule 15 (string_list -> STRING .)


state 25

    (18) arithmetic_expression -> expression PLUS . expression
    (16) expression -> . arithmetic_expression
    (17) expression -> . simple_expression
    (18) arithmetic_expression -> . expression PLUS expression
    (19) simple_expression -> . STRING
    (20) simple_expression -> . VARIABLE

    STRING          shift and go to state 20
    VARIABLE        shift and go to state 21

    expression                     shift and go to state 27
    arithmetic_expression          shift and go to state 18
    simple_expression              shift and go to state 19

state 26

    (14) string_list -> string_list STRING .

    STRING          reduce using rule 14 (string_list -> string_list STRING .)
    REPLY           reduce using rule 14 (string_list -> string_list STRING .)
    LOG             reduce using rule 14 (string_list -> string_list STRING .)
    WAIT            reduce using rule 14 (string_list -> string_list STRING .)
    STEP            reduce using rule 14 (string_list -> string_list STRING .)
    $end            reduce using rule 14 (string_list -> string_list STRING .)


state 27

    (18) arithmetic_expression -> expression PLUS expression .
    (18) arithmetic_expression -> expression . PLUS expression

  ! shift/reduce conflict for PLUS resolved as shift
    REPLY           reduce using rule 18 (arithmetic_expression -> expression PLUS expression .)
    LOG             reduce using rule 18 (arithmetic_expression -> expression PLUS expression .)
    WAIT            reduce using rule 18 (arithmetic_expression -> expression PLUS expression .)
    STEP            reduce using rule 18 (arithmetic_expression -> expression PLUS expression .)
    $end            reduce using rule 18 (arithmetic_expression -> expression PLUS expression .)
    PLUS            shift and go to state 25

  ! PLUS            [ reduce using rule 18 (arithmetic_expression -> expression PLUS expression .) ]

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for PLUS in state 27 resolved as shift
